themes/SuiteP/css/main.scss
/*** MAIN ***/
@import 'variables';

html {
  height: 100%;
}

body {
  font-family: $page-font-family;
  font-size: $page-font-size;
  background: $main-bg;
  color: $main-font-color;
  margin: 0;
  overflow: auto;
  height: 100%;
}

img, svg {
  image-rendering: auto;
}

h3 {
  font-size: $page-font-size;
  font-weight: bold;
}

// override bootstrap
a {
  color: $link-color;
}

a:hover {
  color: $link-color-hover;
}


h4 {
  padding-left: 4px;
  margin-bottom: 2px;
}
h5 {
  padding-left: 4px;
  margin-bottom: 2px;
}

hr {
  background-color: #cccccc;
  color: #cccccc;
  border: 0;
  border-top: 1px solid #cccccc;
  clear: both;
  height: 1px;
}

a:link {
  text-decoration: underline;
}

a:visited {
  text-decoration: underline;
}

a:hover {
  text-decoration: underline;
}

.studiolink svg, .studiolink img {
  width: 30px;
  height: auto;
}

#ajaxHeader {
  float: left;
}

.bootstrap-container {
  background-color: $main-bg;
  margin-top: 110px;

  .dropdown-menu em {
    padding: 0 10px 0 10px;
  }

  .dropdown-menu em a {
    color: $link-color;
  }
}


::selection {background: $selection-bg;color:$selection-color;} /* Safari */
::-moz-selection {background: $selection-bg;color:$selection-color;} /* Firefox */

@media (max-width: 750px) {

  .bootstrap-container.col-sm-offset-3 {
    margin-top: 110px;
  }

  .bootstrap-container {
    margin-top: 110px;
  }
}

@media (max-width: 1130px) {
  .bootstrap-container.col-md-offset-2 {
    margin-left: 0;
  }

  .col-md-10, .bootstrap-container {
    width: 100%;
  }

}

